swagger 추가 , spring security 일단 삭제

--- a/backend/mozzi/build.gradle
+++ b/backend/mozzi/build.gradle
@@ -20,11 +20,19 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
+//	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
+	// swagger 추가
+	//https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui
+	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
+	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+
+	//validation 추가
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 	//	TODO AWS RDS 생성후 추후 추가 필요
 //	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
